--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <nav class='mt-0'>
                     <ul class='nav nav-tabs nav-justified bg-light'>
-                      <li class='nav-item'><a class='nav-link' href="#">Aceuil</a></li>
+                      <li class='nav-item'><a class='nav-link' href="#">Accueil</a></li>
                       <li class='nav-item'><a class='nav-link' href="cv.html">Mon Cv</a></li>
                       <li class='nav-item'><a class='nav-link' href="projet.html">Mes projets</a></li>
                       <li class='nav-item'><a class='nav-link' href="contact.html">contact</a></li>
